<package>
  <name>darc_zeroconf</name>
  <version>0.0.1</version>
  <description>DARC Zeroconf Peer discovery</description>
  <author>Morten Kjaergaard</author>
  <maintainer email="none@none.com">Morten Kjaergaard</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>iris</build_depend>
  <build_depend>darc_common</build_depend>

  <run_depend>iris</run_depend>
</package>
